broken our homepage into smaller components, finished styling our menu-item component

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "crwn-clothing",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "css-loader": "^2.1.0",
+    "sass-loader": "7.*"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -9,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "node-sass": "^4.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
